# A.Ke_common

02_motor/: test.cpp
Learn-OpenCV/: Chapter1  Chapter1.cpp
cloudpoint_pcd/: CMakeLists.txt  package.xml
cloudpoint_pcd/src/change_pcd/: CMakeLists.txt  package.xml
cloudpoint_pcd/src/change_pcd/install/: local_setup.sh  setup.sh
cloudpoint_pcd/src/change_pcd/log/: latest_build
cloudpoint_pcd/src/change_pcd/src/: change_pcd.cpp
cloudpoint_pcd/src/pcd_learn/: CMakeLists.txt
cloudpoint_pcd/src/pcd_learn/install/: local_setup.sh  setup.sh
cloudpoint_pcd/src/pcd_learn/install/pcd_learn/lib/pcd_learn/: pcd_learn
cloudpoint_pcd/src/pcd_learn/install/pcd_learn/share/ament_index/resource_index/parent_prefix_path/: pcd_learn
cloudpoint_pcd/src/pcd_learn/install/pcd_learn/share/pcd_learn/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
cloudpoint_pcd/src/pcd_learn/install/pcd_learn/share/pcd_learn/cmake/: pcd_learnConfig.cmake
cloudpoint_pcd/src/pcd_learn/log/: latest_build
cloudpoint_pcd/src/pcd_learn/src/: pcd_learn.cpp
install/: local_setup.sh  setup.sh
install/tracker_learn/lib/tracker_learn/: founder_node  tracker_node
install/tracker_learn/share/tracker_learn/: local_setup.sh  package.sh
log/: latest_build
tracker_learn/: CMakeLists.txt
tracker_learn/config/: params.yaml
tracker_learn/install/: setup.sh
tracker_learn/log/: latest_build
tracker_learn/src/: founder_node.cpp  tracker_node.cpp
tracker_package/: CMakeLists.txt  package.xml
(+16 files in other folders)
